Force player heads to a specific width, prevents random page jumping whilst image loads

--- a/banmanagement/css/style.css
+++ b/banmanagement/css/style.css
@@ -34,6 +34,10 @@ td.admin-options {
 #search {
 	position: relative;
 }
+.minihead {
+	width: 20px;
+	display: inline-block;
+}
 /*************
   Bootstrap theme
  *************/
